fix(app): remove overflow-x on app container

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   font-size: calc(10px + 2vmin);
   color: #111;
   perspective: 800px;
-  overflow-x: hidden;
 }
 
 @font-face {
